syntax = "proto3";

service TaskManager {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
    rpc ConsultTaskStatus(ConsultTaskStatusRequest) returns (ConsultTaskStatusResponse);
}

message CreateTaskRequest {
    string description = 1;
    string service = 2;
}

message CreateTaskResponse {
    string taskId = 1;
}

message ConsultTaskStatusRequest {
    string taskId = 1;
}

message ConsultTaskStatusResponse {
    string description = 1;
    string status = 2;
}
